# SyncthingHarmonyOSNext

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  MODULE_DESIGN.md  README.md  build-profile.json5  build_syncthing_harmonyos.py  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  syncthing_core_bridge.cpp  syncthing_napi_bridge.cpp
entry/src/main/ets/common/: EventBus.ets  Logger.ets  ServiceLocator.ets  Utils.ets
entry/src/main/ets/data/: PreferencesManager.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: ClusterConfig.ets  Completion.ets  Connection.ets  Device.ets  DeviceStat.ets  Event.ets  FolderCompletion.ets  FolderStatus.ets  GuiConfig.ets  IgnoredFolder.ets  Index.ets  Options.ets  SyncthingConfig.ets  SystemLog.ets  SystemStatus.ets  SystemVersion.ets
entry/src/main/ets/native/: SyncthingNative.ets
entry/src/main/ets/network/: ApiRequest.ets  RestApi.ets  SyncthingTrustManager.ets
entry/src/main/ets/pages/: DeviceDetailPage.ets  DeviceListPage.ets  FirstStartPage.ets  FolderDetailPage.ets  FolderListPage.ets  Index.ets  LogPage.ets  MainPage.ets  RecentChangesPage.ets  SandboxViewPage.ets  SettingsPage.ets  StatusPage.ets  SyncConditionsPage.ets  WebGuiPage.ets
entry/src/main/ets/service/: Constants.ets  (+10 more)
entry/src/test/: Common.test.ets  List.test.ets  Network.test.ets  Service.test.ets
scripts/: build-go-core-archive-e.ps1  build-hap-e.ps1  env-e.ps1  test-local-syncthing-rest.ps1
(+8 files in other folders)
